tests/gabc-dump/should-fail/pitch-too-high.gabc
name: pitch too high;
staff-lines: 3;
%%
(c2) l(l)

